# phonotune

./: .gitignore  .pre-commit-config.yaml  Mn4Si7_low_MACE_OMAT.xyz  README.md  Ru2Sn3_low_MACE_OMAT.xyz  pyproject.toml
phonotune/: calculation_configuration.py  configuration.py  helper_functions.py  materials_iterator.py  model_utils.py  phonon_calculations.py  plotting_bands.py  structure_utils.py
phonotune/alexandria/: configuration_data.py  crystal_structures.py  data_utils.py  mace_adapter.py  materials_iterator.py  model_comparison.py  pair_constructor.py  phonon_data.py  structure_datasets.py  structure_iterator.py
phonotune/evaluation/: eval_utils.py  low_dim_projection.py  phonon_benchmark.py  plotting_utils.py  training_evaluation.py
phonotune/phonon_calculation/: phonon_calculations.py  plotting_bands.py
phonotune/phonon_data/: configuration_data.py  crystal_structures.py  data_utils.py  equilibrium_structure.py  phonon_data.py  structure_datasets.py
scripts/: benchmark_mace.py  calculate_bandstructure.py  calculate_phonons.py  check_initial_val_loss.py  collate_exp.py  compare_finetuned_models.py  count_atoms_in_cells.py  dataloading.py  evaluate_model_train_performance.py  find_max_displacements.py  get_mace_mp_e0s.py  pairwise_dataloading.py  plot_bandstructure.py  plot_benchmarks.py  plot_data_umap.py  plot_phonons.py  relax_structures.py  relax_supercells_from_alexandria.py  search_spinels.py  spinel_single_dataloading.py
scripts/cp2k_scripts/: cp2k_convergence.py  (+1 more)
structures/: Mn4Si7_high_MACE_OMAT.xyz  Ru2Sn3_high_MACE_OMAT.xyz
tests/: test_eval_utils.py  test_lin_displacement_plotting.py  test_pair_construction.py  test_single_construction.py
