[project]
name = "phonotune"
version = "0.1.0"
description = ""

authors = [
    { name = "Steffen Wedig", email = "snw30@cam.ac.uk" },
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "phonopy>=2.35.0",
    "ase>=3.24.0",
    "cuequivariance-torch==0.1.0",
    "cuequivariance==0.1.0",
    "cuequivariance-ops-torch-cu12==0.1.0",
    "torch>=2.5.1",
    "pymatgen>=2025.1.24"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["I", "UP", "F", "E", "W", "C90", "B", "A", "RUF"]
lint.ignore = ["E501", "B008"]
